@@ -8,12 +8,16 @@
 // to add functions etc. in the document's context.
 String.prototype.evalScripts = function() {
   return this.extractScripts().map(function(script) { 
-    if (window.execScript) {
-      return window.execScript(script);
-    } else if (navigator.userAgent.indexOf('Safari') != -1) {
-      window.setTimeout(script, 0);
-    } else {
-      return window.eval(script);
-    }      
+    atkEval(script);
   });
+};
+
+function atkEval(script) {
+	if (window.execScript) {
+	  return window.execScript(script);
+	} else if (navigator.userAgent.indexOf('Safari') != -1) {
+	  window.setTimeout(script, 0);
+	} else {
+	  return window.eval(script);
+	}      
 };
